--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         </div>
         <div class="bg1">
+            <h1>TIC-TAC-TOE</h1>
+            <a href="https://github.com/nabiha915/TicTacToe" class="btn">Click here!</a>
             <h2><i class="fas fa-heart"></i></h2>
         </div>
         <div class="bg2">
