--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <h2><i class="fas fa-heart"></i></h2>
         </div>
         <div class="bg2">
+            <h1>CATCH THE COIN</h1>
+            <a href="https://github.com/nabiha915/Catch-the-coin" class="btn">Click here!</a>
             <h2><i class="fas fa-running"></i></h2>
             <h1></h1>
         </div>
